--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,2 @@
 [run]
-omit = tests/*, instance/*, htmlcov/*, HRSystem/dbutils.py, HRSystem/utils.py 
+omit = tests/*, instance/*, htmlcov/*, HRSystem/dbutils.py
